fix spark startup