@@ -37,7 +37,10 @@ echo "Executing spark-submit jobs"
 echo "--------------------------------------------------------------------"
 
 #Execute spark-submit jobs
-docker run --network datahub_network spark-submit
+docker run \
+  -e SPARK_DRIVER_EXTRA_JAVA_OPTIONS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED" \
+  --network datahub_network \
+  spark-submit
 
 echo "--------------------------------------------------------------------"
 echo "Starting pytest"
